1.0-devel
=====================

 * Fixed permission issue in formatCatalogMetadata.py.
   [alecm]

 * ConstrainTypes should default to disabled unless the parent object is of
   the same portal type.
   [alecm]

 * General get_size fixes. The get_size() method returns either the size
   of the primary field or 1 for folders.
   [tiran]

 * Moved not yet implemented URL upload feature out of the main code.
   [tiran]

 * Fixed constraintypes's allowedContentTypes and invokeFactory to make
   ENABLED mode work when the portal_type is different with parent's.
   [panjunyong]

 * Added http access functionl http tests.
   [tiran]

 * Added HEAD() method to Topic. If the topic has at least one criterion or
   it can acquire a query 200 OK is return else 404 NotFound
   [tiran]

 * Fixed [Plone] 4295/ 1 Request "ATCT and related items fields".
   [tiran]

 * Added workaround for [ 1229206 ] 2.0.5 > 2.1 migration fails. Failing
   reorder is mostly harmless.
   [tiran]

 * Added workarounds for EXIF MakerNote errors. Some cameras are *really* 
   broken. Better no make notes than no exif infos at all.
   [tiran]

 * Fixed and improved recent changes to cleanupFilename(). You can't remove
   features w/o keeping backward compatibility and new features must be
   bullet proof!
   [tiran]

 * Clean up multiple Topic folder_contents tabs.
   [alecm]

 * Readded a seperate _cleanupFilename method for ATCTFileContent to make it 
   better for patch.
   [panjunyong]

 * Fixed http://plone.org/collector/4218 ATCT now uses normalizeString from
   PloneTool. 
   [hannosch]

 * Fixed http://plone.org/collector/4170 Link checking is crazy and [ 1197068 ]
   [hannosch]

 * made constraintypes default ACQUIRE mode works with portal_factory
   [panjunyong]

 * Added Five/Zope3 interface bridges
   [tiran]

 * Disabled text/x-python and text/plain-pre by default. Customize the
   atcontenttypes.conf if you need them.
   [tiran]
   
 * Removed relatedItems field from folderish objects.