@@ -45,10 +45,12 @@ from Products.ATContentTypes.content.image import ATImageSchema
 from Products.ATContentTypes.migration.atctmigrator import ImageMigrator
 from Products.ATContentTypes.interfaces import IImageContent
 from Products.ATContentTypes.interfaces import IATImage
+from Products.ATContentTypes.lib import exif
 from Products.CMFDefault.Image import Image
 from Interface.Verify import verifyObject
 from Products.CMFPlone import transaction
 
+TEST_CANONEYE_JPG = open(os.path.join(PACKAGE_HOME, 'CanonEye.jpg'), 'rb').read()
 TEST_GIF = open(os.path.join(PACKAGE_HOME, 'test.gif'), 'rb').read()
 TEST2_GIF = open(os.path.join(PACKAGE_HOME, 'test_DivisionError.jpg'), 'rb').read()
 TEST_JPEG_FILE = open(os.path.join(PACKAGE_HOME, 'CanonEye.jpg'), 'rb')
@@ -185,8 +187,51 @@ class TestSiteATImage(atcttestcase.ATCTTypeTestCase):
     def test_get_size(self):
         atct = self._ATCT
         editATCT(atct)
-	self.failUnlessEqual(len(TEST_JPEG), TEST_JPEG_LEN)
+        self.failUnlessEqual(len(TEST_JPEG), TEST_JPEG_LEN)
         self.failUnlessEqual(atct.get_size(), TEST_JPEG_LEN)
+        
+    def test_schema_marshall(self):
+        atct = self._ATCT
+        schema = atct.Schema()
+        marshall = schema.getLayerImpl('marshall')
+        self.failUnless(isinstance(marshall, PrimaryFieldMarshaller), marshall)
+
+    def test_dcEdit(self):
+        #if not hasattr(self, '_cmf') or not hasattr(self, '_ATCT'):
+        #    return
+        old = self._cmf
+        new = self._ATCT
+        new.setImage(TEST_JPEG, content_type="image/jpeg")
+        dcEdit(old)
+        dcEdit(new)
+        self.compareDC(old, new)
+
+    def test_broken_exif(self):
+
+        #EXIF data in images from Canon digicams breaks EXIF of 2005.05.12 with following exception
+        # 
+          #2005-05-01T19:21:16 ERROR(200) Archetypes None
+        #Traceback (most recent call last):
+        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/content/image.py", line 207, in getEXIF
+        #    exif_data = exif.process_file(img, debug=False, noclose=True)
+        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/lib/exif.py", line 1013, in process_file
+        #    hdr.decode_maker_note()
+        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/lib/exif.py", line 919, in decode_maker_note
+        #    dict=MAKERNOTE_CANON_TAGS)
+        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/lib/exif.py", line 753, in dump_IFD
+        #    raise ValueError, \
+        #ValueError: unknown type 768 in tag 0x0100
+        #
+
+        # This test fails even with the 2005.05.12 exif version from 
+        #    http://home.cfl.rr.com/genecash/
+
+        atct = self._ATCT
+        atct.setImage(TEST_CANONEYE_JPG, mimetype='image/jpeg', filename='CanonImage.jpg')
+        canonImage = atct.getImageAsFile(scale=None)
+        exif_data = exif.process_file(canonImage, debug=False)        
+        # probably want to add some tests on returned data. Currently gives 
+        #  ValueError in process_file 
 
 tests.append(TestSiteATImage)
 
@@ -242,56 +287,6 @@ class TestATImageFields(atcttestcase.ATCTFieldTestCase):
 
 tests.append(TestATImageFields)
 
-from Products.ATContentTypes.lib import exif
-TEST_CANONEYE_JPG = open(os.path.join(PACKAGE_HOME, 'CanonEye.jpg'), 'rb').read()
-class TestSiteATImageExif(atcttestcase.ATCTTypeTestCase):
-
-    klass = ATImage
-    portal_type = 'Image'
-    cmf_portal_type = 'CMF Image'
-    cmf_klass = Image
-    title = 'Image'
-    meta_type = 'ATImage'
-    icon = 'image_icon.gif'
-
-    def test_dcEdit(self):
-        #if not hasattr(self, '_cmf') or not hasattr(self, '_ATCT'):
-        #    return
-        old = self._cmf
-        new = self._ATCT
-        new.setImage(TEST_JPEG, content_type="image/jpeg")
-        dcEdit(old)
-        dcEdit(new)
-        self.compareDC(old, new)
-
-    def test_broken_exif(self):
-
-        #EXIF data in images from Canon digicams breaks EXIF of 2005.05.12 with following exception
-        # 
-      	#2005-05-01T19:21:16 ERROR(200) Archetypes None
-        #Traceback (most recent call last):
-        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/content/image.py", line 207, in getEXIF
-        #    exif_data = exif.process_file(img, debug=False, noclose=True)
-        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/lib/exif.py", line 1013, in process_file
-        #    hdr.decode_maker_note()
-        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/lib/exif.py", line 919, in decode_maker_note
-        #    dict=MAKERNOTE_CANON_TAGS)
-        #  File "/home/russ/cb/var/zope/Products/ATContentTypes/lib/exif.py", line 753, in dump_IFD
-        #    raise ValueError, \
-        #ValueError: unknown type 768 in tag 0x0100
-        #
-
-        # This test fails even with the 2005.05.12 exif version from 
-        #    http://home.cfl.rr.com/genecash/
-
-        atct = self._ATCT
-        atct.setImage(TEST_CANONEYE_JPG, mimetype='image/jpeg', filename='CanonImage.jpg')
-        canonImage = atct.getImageAsFile(scale=None)
-        exif_data = exif.process_file(canonImage, debug=False)        
-        # probably want to add some tests on returned data. Currently gives 
-        #  ValueError in process_file 
-
-tests.append(TestSiteATImageExif)
 
 if __name__ == '__main__':
     framework()
