@@ -50,8 +50,7 @@ Document
   ... Content-Type: text/html; charset="utf-8"
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
@@ -108,8 +107,7 @@ Document
   ... Authorization: Basic %s:%s
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, "a test"))
+  ... %s""" % (fpath, user_name, user_password, "a test"))
   HTTP/1.1 201 Created
   ...
 
@@ -140,8 +138,7 @@ Event
   ... Authorization: Basic %s:%s
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
@@ -169,8 +166,7 @@ File
   ... Content-Type: application/zip
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
   
@@ -185,7 +181,10 @@ File
   test-file
   
   >>> input.seek(0)
-  >>> print str(file.getFile()) == input.read()
+  >>> len(str(file.getFile())), len(input.read())
+  (145, 145)
+  >>> input.seek(0)
+  >>> file.getFile().data == input.read()
   True
   
   >>> print file.getContentType()
@@ -202,8 +201,7 @@ File
   ... Authorization: Basic %s:%s
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
@@ -235,8 +233,7 @@ Image
   ... Content-Type: image/gif
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
@@ -251,7 +248,10 @@ Image
   test-image
   
   >>> input.seek(0)
-  >>> print str(image.getImage().data) == input.read()
+  >>> len(str(image.getImage().data)), len(input.read())
+  (905, 905)
+  >>> input.seek(0)
+  >>> image.getImage().data == input.read()
   True
   
   >>> print image.getContentType()
@@ -268,8 +268,7 @@ Image
   ... Authorization: Basic %s:%s
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
@@ -294,8 +293,7 @@ Image
   ... Authorization: Basic %s:%s
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
@@ -324,8 +322,7 @@ Link
   ... Authorization: Basic %s:%s
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
@@ -352,8 +349,7 @@ News Item
   ... Authorization: Basic %s:%s
   ... Depth: 0
   ...
-  ... %s
-  ... """ % (fpath, user_name, user_password, input.read()))
+  ... %s""" % (fpath, user_name, user_password, input.read()))
   HTTP/1.1 201 Created
   ...
 
